--- a/trunk/sim/po/de.po
+++ b/trunk/sim/po/de.po
@@ -1,20 +1,21 @@
 # translation of de.po to Deutsch
-# Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
-# Christoph Thielecke <crissi99@gmx.de>, 2002, 2003, 2004.
-# Crissi <crissi99@gmx.de>, 2004.
-# Christian Ehrlicher <Ch.Ehrlicher@gmx.de>, 2004.
+# Copyright (C) 2002 - 2006 Free Software Foundation, Inc.
+# Christoph Thielecke <crissi99@gmx.de>, 2002 - 2006.
+# Christian Ehrlicher <Ch.Ehrlicher@gmx.de>, 2003 - 2006.
+# Tobias Franz <noragen@gmx.net>, 2002 - 2006,
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "POT-Creation-Date: 2006-01-15 22:23+0500\n"
-"PO-Revision-Date: 2006-01-16 01:01+0100\n"
+"PO-Revision-Date: 2006-02-03 09:19+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Deutsch <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
+"X-Poedit-Basepath: E:\\sim-icq\\simsim\\sim-im\\sim\n"
 
 #: plugins/__homedir/homedir.cpp:48
 msgid "Home directory"
