--- a/trunk/sim/po/uk.po
+++ b/trunk/sim/po/uk.po
@@ -4,24 +4,23 @@
 # translation of uk.po to
 # translation of uk.po to
 # translation of uk.po to Ukrainian
-# translation of uk.po to Український
 # Copyright (C) 2002, 2003, 2004, 2005, 2006 Free Software Foundation, Inc.
+#
 # Ivan Krutyholova <ivan@city.gov.te.ua>, 2002, 2003, 2004.
 #  <ivan@cit-white>, 2005.
 # Ivan O.Krutyholova <ivan@city.gov.te.ua>, 2006.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "POT-Creation-Date: 2006-03-11 02:52+0500\n"
-"PO-Revision-Date: 2006-01-15 22:15+0200\n"
+"PO-Revision-Date: 2006-03-20 10:16+0200\n"
 "Last-Translator: Ivan O.Krutyholova <ivan@city.gov.te.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.10.2\n"
+"X-Generator: KBabel 1.11\n"
 
 #: _translatorinfo.cpp:1 plugins/about/about.cpp:113
 msgid ""
@@ -675,13 +674,12 @@ msgid "Send SMS"
 msgstr "Надіслати SMS"
 
 #: plugins/_core/core.cpp:3705
-#, fuzzy
 msgid "Use specified profile"
-msgstr "Виберіть профіль"
+msgstr "Використовувати специфічний профіль"
 
 #: plugins/_core/core.cpp:3720
 msgid "Add new ICQ UIN to profile. You need to specify uin:password"
-msgstr ""
+msgstr "Добавити новий ICQ UIN в профіль. Вам потрібно мати uin:пароль"
 
 #. i18n: file ./plugins/_core/managerbase.ui line 20
 #: plugins/_core/core.cpp:4285 plugins/_core/core.cpp:4307 rc.cpp:1228
@@ -822,7 +820,7 @@ msgstr "Показувати %1 повідомлень на сторінці"
 #: plugins/_core/historycfg.cpp:213 rc.cpp:883
 #, no-c-format
 msgid "Use external viewer"
-msgstr ""
+msgstr "Використовувати зовнішній переглядач"
 
 #: plugins/_core/historycfg.cpp:485
 msgid "Remove style '%1'?"
@@ -993,9 +991,9 @@ msgstr "Копіювати %1 повідомлень із історії"
 
 #. i18n: file ./plugins/_core/interfacecfgbase.ui line 267
 #: plugins/_core/interfacecfg.cpp:149 rc.cpp:839
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Show own nickname in window title"
-msgstr "Показати головне вікно"
+msgstr "Показувати прізвисько власника в назві вікна"
 
 #: plugins/_core/logindlg.cpp:60
 msgid "Select profile"
@@ -1230,8 +1228,7 @@ msgstr "Скасувати"
 
 #: plugins/_core/msgedit.cpp:998
 msgid "No such client for send message"
-msgstr ""
-"Нема клієнта для відсилання повідомлення"
+msgstr "Нема клієнта для відсилання повідомлення"
 
 #: plugins/_core/msgedit.cpp:1654 plugins/icq/icq.cpp:370
 #: plugins/jabber/jabber.cpp:224
@@ -1281,8 +1278,7 @@ msgstr "Розмір: %1 / Максимальний: %2"
 
 #: plugins/_core/msgsms.cpp:172
 msgid "Message will be split"
-msgstr ""
-"Повідомлення буде розділено на частини"
+msgstr "Повідомлення буде розділено на частини"
 
 #: plugins/_core/msgsms.cpp:303
 msgid "Save phone in contact list"
@@ -1584,8 +1580,7 @@ msgstr "Фон"
 
 #: plugins/background/background.cpp:37
 msgid "Plugin provides background pictures for user list"
-msgstr ""
-"Модуль забезпечує фон списку контактів"
+msgstr "Модуль забезпечує фон списку контактів"
 
 #: plugins/background/bkgndcfg.cpp:45
 msgid "Select background picture"
@@ -1922,13 +1917,11 @@ msgstr "Невірний заголовок"
 
 #: plugins/icq/icqclient.cpp:705
 msgid "Server rate limit exceeded"
-msgstr ""
-"Перевищений ліміт повідомлень на сервері"
+msgstr "Перевищений ліміт повідомлень на сервері"
 
 #: plugins/icq/icqclient.cpp:706
 msgid "Client rate limit exceeded"
-msgstr ""
-"Перевищено ліміт повідомлень на клієнті"
+msgstr "Перевищено ліміт повідомлень на клієнті"
 
 #: plugins/icq/icqclient.cpp:707
 msgid "Recipient is not logged in"
@@ -2110,8 +2103,7 @@ msgstr "Не можу встановити пряме з'єднання"
 
 #: plugins/icq/icqdirect.cpp:834
 msgid "Other side does not support the secure connection"
-msgstr ""
-"Контакт не підтримує безпечне з'єднання"
+msgstr "Контакт не підтримує безпечне з'єднання"
 
 #: plugins/icq/icqdirect.cpp:847 plugins/icq/icqdirect.cpp:1049
 msgid "Send message fail"
@@ -3510,6 +3502,9 @@ msgid ""
 "ed by <a style=\"font-size:1em;font-style:italic;\" "
 "href=\"http://sim-im.berlios.de\">SIM Instant Messenger</a></div>"
 msgstr ""
+"<div "
+"style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Працює під <a style=\"font-size:1em;font-style:italic;\" "
+"href=\"http://sim-im.berlios.de\">SIM Instant Messenger</a></div>"
 
 #: plugins/livejournal/livejournal.cpp:1375
 msgid "Invalid username"
@@ -4196,8 +4191,7 @@ msgid "Navigate"
 msgstr "Навігація"
 
 #: plugins/navigate/navigate.cpp:229
-msgid ""
-"Plugin provides navigation on hyperlinks, call an external browser and mailer"
+msgid "Plugin provides navigation on hyperlinks, call an external browser and mailer"
 msgstr ""
 "Модуль забезпечує навігацію по "
 "гіперпосиланнях"
@@ -4298,8 +4292,7 @@ msgid "OSD"
 msgstr "Екран"
 
 #: plugins/osd/osd.cpp:72
-msgid ""
-"Plugin provides on screen notification about messages and contacts status"
+msgid "Plugin provides on screen notification about messages and contacts status"
 msgstr ""
 "Модуль забезпечує вивід попереджень на "
 "екран про прихід повідомлень або зміну "
@@ -4465,8 +4458,7 @@ msgstr "Віддалене керування"
 
 #: plugins/remote/remote.cpp:46
 msgid "Plugin provides remote control"
-msgstr ""
-"Модуль забезпечує віддалене керування"
+msgstr "Модуль забезпечує віддалене керування"
 
 #: plugins/replace/replace.cpp:36
 msgid "Replace text"
@@ -4563,8 +4555,7 @@ msgstr "Звук"
 
 #: plugins/sound/sound.cpp:47
 msgid "Plugin provides sounds on any events"
-msgstr ""
-"Модуль забезпечує звуки для різних подій"
+msgstr "Модуль забезпечує звуки для різних подій"
 
 #: plugins/sound/sound.cpp:118 plugins/sound/sound.cpp:126
 msgid "&Sound"
@@ -4585,8 +4576,7 @@ msgstr "Попередження про вхід в мережу"
 
 #: plugins/spell/spell.cpp:65
 msgid "Plugin provides check spelling"
-msgstr ""
-"Модуль забезпечує перевірку орфографії"
+msgstr "Модуль забезпечує перевірку орфографії"
 
 #: plugins/spell/spellcfg.cpp:48
 msgid "ASpell(aspell.exe)"
@@ -4762,18 +4752,16 @@ msgid ""
 msgstr "Слабкий дощ"
 
 #: plugins/weather/weather.cpp:390 plugins/weather/weather.cpp:410
-#, fuzzy
 msgid ""
 "_: weather\n"
 "Freezing Rain"
-msgstr "Морозна мряка"
+msgstr "Морозний дощ"
 
 #: plugins/weather/weather.cpp:391
-#, fuzzy
 msgid ""
 "_: weather\n"
 "Rain to Snow"
-msgstr "Слабкий сніг"
+msgstr "Сніг з дощем"
 
 #: plugins/weather/weather.cpp:392
 msgid ""
@@ -4806,11 +4794,10 @@ msgid ""
 msgstr "Ясно"
 
 #: plugins/weather/weather.cpp:397
-#, fuzzy
 msgid ""
 "_: weather\n"
 "Clearing"
-msgstr "Ясно"
+msgstr "Прояснення"
 
 #: plugins/weather/weather.cpp:398
 msgid ""
@@ -4843,7 +4830,6 @@ msgid ""
 msgstr "Хмарно"
 
 #: plugins/weather/weather.cpp:403
-#, fuzzy
 msgid ""
 "_: waether\n"
 "Clouds"
@@ -5074,7 +5060,6 @@ msgid ""
 msgstr "Зливи в околицях"
 
 #: plugins/weather/weather.cpp:444
-#, fuzzy
 msgid ""
 "_: moonphase\n"
 "Waxing Crescent"
@@ -5084,10 +5069,9 @@ msgstr "Збільшення півмісяця"
 msgid ""
 "_: moonphase\n"
 "First Quarter"
-msgstr ""
+msgstr "Початкова чверть"
 
 #: plugins/weather/weather.cpp:446
-#, fuzzy
 msgid ""
 "_: moonphase\n"
 "Waxing Gibbous"
@@ -5097,10 +5081,9 @@ msgstr "Збільшення опуклості"
 msgid ""
 "_: moonphase\n"
 "Full"
-msgstr ""
+msgstr "Повний"
 
 #: plugins/weather/weather.cpp:448
-#, fuzzy
 msgid ""
 "_: moonphase\n"
 "Waning Gibbous"
@@ -5110,10 +5093,9 @@ msgstr "Зменшення опуклості"
 msgid ""
 "_: moonphase\n"
 "Last Quarter"
-msgstr ""
+msgstr "Кінцева чверть"
 
 #: plugins/weather/weather.cpp:450
-#, fuzzy
 msgid ""
 "_: moonphase\n"
 "Waning Crescent"
@@ -5148,7 +5130,6 @@ msgid "%t | %c"
 msgstr "%t | %c"
 
 #: plugins/weather/weather.cpp:567
-#, fuzzy
 msgid ""
 "%l<br><br>\n"
 "<b>Current Weather:</b><br>\n"
@@ -5169,25 +5150,25 @@ msgid ""
 "Updated: %u<br>\n"
 msgstr ""
 "%l<br><br>\n"
+"<b>Актуальна погода:</b><br>\n"
 "<img src=\"icon:weatheri%i\"> %c<br>\n"
 "Температура: <b>%t</b> <br>\n"
 "(відчувається: <b>%f</b>)<br>\n"
 "Вологість: <b>%h%</b><br>\n"
-"Precipitance: <b>%pp %</b><br>\n"
+"Стрімкість: <b>%pp %</b><br>\n"
 "Тиск: <b>%p</b> (%q)<br>\n"
 "Вітер: <b>%b</b> <b>%w %g</b><br>\n"
 "Видимість: <b>%v</b><br>\n"
 "Точка роси <b>%d</b><br>\n"
 "Схід: %r<br>\n"
 "Захід: %s<br>\n"
-"<img src=\"icon:moon%mi\"> %mp<br>\n"
-"UV-інтенсивність є <b>%ut</b> із значенням "
-"<b>%ui</b> (of 11)<br>\n"
+"UV-інтенсивність є <b>%ut</b> із значенням <b>%ui</b> (з 11)<br>\n"
+"<b>Місячна фаза: </b>%mp<br>\n"
+"<img src=\"icon:moon%mi\"><br>\n"
 "<br>\n"
 "Поновлено: %u<br>\n"
 
 #: plugins/weather/weather.cpp:591
-#, fuzzy
 msgid ""
 "<br><br>\n"
 "<b>Forecast for</b><br>\n"
@@ -5195,7 +5176,8 @@ msgid ""
 "<img src=\"icon:weather%n\"> %c<br>\n"
 " Temperature: <b>%t</b><br>\n"
 msgstr ""
-"<br>\n"
+"<br><br>\n"
+"<b>Прогнозувати для</b><br>\n"
 "<nobr><b>%d %w</b></nobr><br>\n"
 "<img src=\"icon:weather%n\"> %c<br>\n"
 " Температура: <b>%t</b><br>\n"
@@ -5766,15 +5748,13 @@ msgstr ""
 #: rc.cpp:196
 #, no-c-format
 msgid "Automatically &accept subscribe requests"
-msgstr ""
-"Автоматично &приймати запити авторизації"
+msgstr "Автоматично &приймати запити авторизації"
 
 #. i18n: file ./plugins/jabber/jabberconfigbase.ui line 732
 #: rc.cpp:199
 #, no-c-format
 msgid "Send &rich text messages if possible"
-msgstr ""
-"Відправити повідомлення з &форматуванням"
+msgstr "Відправити повідомлення з &форматуванням"
 
 #. i18n: file ./plugins/jabber/jabberconfigbase.ui line 788
 #: rc.cpp:202 rc.cpp:553
@@ -6106,8 +6086,7 @@ msgstr "Встановити статус \"Вимкнений\" через"
 #. i18n: file ./plugins/autoaway/autoawaycfgbase.ui line 138
 #: rc.cpp:451
 #, no-c-format
-msgid ""
-"Disable online alert in \"Away\", \"N/A\", \"DND\" and \"Occupied\" List"
+msgid "Disable online alert in \"Away\", \"N/A\", \"DND\" and \"Occupied\" List"
 msgstr ""
 "Заборонити попередження в стані "
 "\"Відійшов\", \"Неактивний\", \"Не турбувати\", "
@@ -6153,8 +6132,7 @@ msgstr "Кнопка"
 #: rc.cpp:495
 #, no-c-format
 msgid "Show &main window in task manager"
-msgstr ""
-"Показувати &основне вікно в панелі задач"
+msgstr "Показувати &основне вікно в панелі задач"
 
 #. i18n: file ./plugins/ontop/ontopcfgbase.ui line 53
 #: rc.cpp:498
@@ -6190,15 +6168,13 @@ msgstr "Мова:"
 #: rc.cpp:526
 #, no-c-format
 msgid "Enable &messages notification"
-msgstr ""
-"Увімкнути &попередження про повідомлення"
+msgstr "Увімкнути &попередження про повідомлення"
 
 #. i18n: file ./plugins/osd/osdconfigbase.ui line 50
 #: rc.cpp:529
 #, no-c-format
 msgid "Enable &status notification"
-msgstr ""
-"Увімкнути попередження про зміну &статусу"
+msgstr "Увімкнути попередження про зміну &статусу"
 
 #. i18n: file ./plugins/osd/osdconfigbase.ui line 149
 #: rc.cpp:556
@@ -6264,8 +6240,7 @@ msgstr "Показувати на моніторі:"
 #: rc.cpp:598
 #, no-c-format
 msgid "Use &default path"
-msgstr ""
-"Використовувати &шлях за замовчуванням"
+msgstr "Використовувати &шлях за замовчуванням"
 
 #. i18n: file ./plugins/__homedir/homedircfgbase.ui line 50
 #: rc.cpp:601
@@ -6543,8 +6518,7 @@ msgstr "Режим &чату"
 #: rc.cpp:819
 #, no-c-format
 msgid "&Using last selected font"
-msgstr ""
-"&Використовувати останній вибраний шрифт"
+msgstr "&Використовувати останній вибраний шрифт"
 
 #. i18n: file ./plugins/_core/interfacecfgbase.ui line 118
 #: rc.cpp:822
@@ -6608,8 +6582,7 @@ msgstr "&Джерело"
 #: rc.cpp:877
 #, no-c-format
 msgid "Use &own colors and fonts settings"
-msgstr ""
-"Використовувати &власні кольори і шрифти"
+msgstr "Використовувати &власні кольори і шрифти"
 
 #. i18n: file ./plugins/_core/historycfgbase.ui line 369
 #: rc.cpp:887
@@ -6789,8 +6762,7 @@ msgstr "Використовувати по&двійне клацання"
 #: rc.cpp:1057
 #, no-c-format
 msgid "Use small &font for group"
-msgstr ""
-"Використовувати дрібний &шрифт для групи"
+msgstr "Використовувати дрібний &шрифт для групи"
 
 #. i18n: file ./plugins/_core/userviewcfgbase.ui line 271
 #: rc.cpp:1060
@@ -7082,15 +7054,15 @@ msgstr ""
 
 #. i18n: file ./plugins/livejournal/livejournalcfgbase.ui line 384
 #: rc.cpp:1323
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use formatted messages"
-msgstr "Непрочитані повідомлення"
+msgstr "Використовувати форматування повідомлень"
 
 #. i18n: file ./plugins/livejournal/livejournalcfgbase.ui line 395
 #: rc.cpp:1326
 #, no-c-format
 msgid "Add signature to all messages"
-msgstr ""
+msgstr "Добавляти підпис до всіх повідомлень"
 
 #. i18n: file ./plugins/livejournal/journalsearchbase.ui line 39
 #: rc.cpp:1332
@@ -8152,8 +8124,7 @@ msgstr "..."
 
 #: sim/aboutdata.cpp:303
 msgid "This program is distributed under the terms of the GPL v2."
-msgstr ""
-"Ця програма поширюється під ліцензією GPL v2"
+msgstr "Ця програма поширюється під ліцензією GPL v2"
 
 #: sim/ballonmsg.cpp:336
 msgid "&Ok"
@@ -9944,3 +9915,4 @@ msgstr "Стиль Windows XP"
 #, fuzzy
 #~ msgid "%n GPG key"
 #~ msgstr "GPG ключ"
+
