correct spelling in weather.

--- a/trunk/sim/po/de.po
+++ b/trunk/sim/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "POT-Creation-Date: 2006-03-11 02:52+0500\n"
-"PO-Revision-Date: 2006-03-11 02:57+0100\n"
+"PO-Revision-Date: 2006-03-22 00:44+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Deutsch <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -5283,7 +5283,7 @@ msgid ""
 "Updated: %u<br>\n"
 msgstr ""
 "%l<br><br>\n"
-"<b>Aktuelles Wetterr:</b><br>\n"
+"<b>Aktuelles Wetter:</b><br>\n"
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Temperatur: <b>%t</b> (gefühlt wie: <b>%f</b>)<br>\n"
 "Luftfeuchtigkeit: <b>%h</b><br>\n"
