--- a/trunk/sim/po/de.po
+++ b/trunk/sim/po/de.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "POT-Creation-Date: 2006-03-11 02:52+0500\n"
-"PO-Revision-Date: 2006-03-22 00:44+0100\n"
-"Last-Translator: Tobias Franz <noragen@gmx.net>\n"
+"PO-Revision-Date: 2006-04-03 00:49+0100\n"
+"Last-Translator: Tobias <Tobias_Franz@hotmail.com>\n"
 "Language-Team: Deutsch <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5170,7 +5170,7 @@ msgstr "km/h"
 msgid ""
 "_: weather\n"
 "Low"
-msgstr "wenig"
+msgstr "niedrig"
 
 #: plugins/weather/weather.cpp:440
 msgid ""
@@ -8322,7 +8322,7 @@ msgstr "&Anonym warnen"
 #, no-c-format
 msgid ""
 "Check this if you don't want your screen name revealed.\n"
-"Anonymous warinings are less severe."
+"Anonymous warnings are less severe."
 msgstr ""
 "Hier aktivieren, wenn der AIM-Spitzname nicht aufgedeckt werden soll.\n"
 "Anonyme Warnungen sind weniger schwer."
