--- a/branches/0.9.4-debian/debian/sim.1
+++ b/branches/0.9.4-debian/debian/sim.1
@@ -1,4 +1,4 @@
-.TH "SIM" "3" "January 11, 2006" "SIM-IM Team" "Simple Instant Messenger"
+.TH "SIM" "1" "April 4, 2006" "SIM-IM Team" "Simple Instant Messenger"
 .SH NAME
 SIM \- Simple Instant Messenger
 .SH SYNOPSIS
@@ -60,5 +60,5 @@ programs are properly installed at your site, the command
 .PP
 should give you access to the complete manual.
 
-.SH "AUTHOR"
-SIM-IM Team, see http://sim-im.berlios.de/ and /usr/share/doc/sim/AUTHORS.sim
+.SH "AUTHORS"
+SIM-IM Team, see http://sim-im.org/ and /usr/share/doc/sim/AUTHORS.sim
