--- a/trunk/sim/po/uk.po
+++ b/trunk/sim/po/uk.po
@@ -3500,11 +3500,11 @@ msgid ""
 "<div "
 "style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Power"
 "ed by <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.berlios.de\">SIM Instant Messenger</a></div>"
+"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
 msgstr ""
 "<div "
 "style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Працює під <a style=\"font-size:1em;font-style:italic;\" "
-"href=\"http://sim-im.berlios.de\">SIM Instant Messenger</a></div>"
+"href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
 
 #: plugins/livejournal/livejournal.cpp:1375
 msgid "Invalid username"
