--- a/branches/0.9.4/po/de.po
+++ b/branches/0.9.4/po/de.po
@@ -3661,8 +3661,8 @@ msgid "Posting failed"
 msgstr "Beitrag fehlgeschlagen"
 
 #: plugins/livejournal/livejournal.cpp:851
-msgid "<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://sim-im.berlios.de\">SIM Instant Messenger</a></div>"
-msgstr "<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Unterstützt von <a style=\"font-size:1em;font-style:italic;\" href=\"http://sim-im.berlios.de\">SIM Instant Messenger</a></div>"
+msgid "<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Powered by <a style=\"font-size:1em;font-style:italic;\" href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
+msgstr "<div style=\"text-align:right;font-size:0.7em;font-style:italic;width:100%\">Unterstützt von <a style=\"font-size:1em;font-style:italic;\" href=\"http://sim-im.org\">SIM Instant Messenger</a></div>"
 
 #: plugins/livejournal/livejournal.cpp:1375
 msgid "Invalid username"
