--- a/branches/0.9.4-debian/debian/changelog
+++ b/branches/0.9.4-debian/debian/changelog
@@ -1,9 +1,17 @@
 sim (0.9.3.99svn20060404-1) unstable; urgency=low
 
-  * A lot of fixes.
-  * Upstream revision branches/0.9.4#412.
+  * New upstream svn snapshot branches/0.9.4#412 (Closes: #343253) which includes:
+   - A lot of fixes.
+   - Fixed: new message icon in dock is blinking even after reading (Closes: #242233)
+   - Fixed deing while sending long message (Closes: #259195)
+   - Fixed conflict with installed kopete (Closes: #271685)
+   - Fixed: icons for ICQ are not set (Closes: #299664)
+   - More informative Description field to mention KDE/Qt (Closes: #312047)
+   - sim now correctly sends html formatted messages to ICQ (Closes: #328367)
+  * New homepage: http://sim-im.org/
+  * New maintainer.
 
- -- Alexander Petrov <zowers@gmail.com>  Tue,  4 Apr 2006 04:06:35 +0400
+ -- Alexander Petrov <zowers@gmail.com>  Sun,  9 Apr 2006 02:59:26 +0400
 
 sim (0.9.3-1.1) unstable; urgency=low
 
