--- a/trunk/sim/po/de.po
+++ b/trunk/sim/po/de.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "POT-Creation-Date: 2006-03-11 02:52+0500\n"
-"PO-Revision-Date: 2006-04-03 00:49+0100\n"
-"Last-Translator: Tobias <Tobias_Franz@hotmail.com>\n"
+"PO-Revision-Date: 2006-04-26 01:55+0100\n"
+"Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Deutsch <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,7 +29,7 @@ msgstr "Christoph Thielecke, Tobias Franz"
 msgid ""
 "_: EMAIL OF TRANSLATORS\n"
 "Your emails"
-msgstr "crissi99@gmx.de,noragen@gmx.net"
+msgstr "crissi99@gmx.de, noragen@gmx.net"
 
 #: plugins/__homedir/homedir.cpp:51
 msgid "Home directory"
