--- a/branches/0.9.4-debian/debian/changelog
+++ b/branches/0.9.4-debian/debian/changelog
@@ -1,3 +1,10 @@
+sim (0.9.3.99svn20060428-3) unstable; urgency=low
+
+  * Added screensaver dependency for autoaway plugin (libxss-dev)
+    (Closes: #365650)
+
+ -- Alexander Petrov <zowers@gmail.com>  Wed,  3 May 2006 01:54:42 +0400
+
 sim (0.9.3.99svn20060428-2) unstable; urgency=low
 
   * Really change maintainer.
