--- a/branches/0.9.4-debian/debian/changelog
+++ b/branches/0.9.4-debian/debian/changelog
@@ -1,9 +1,10 @@
-sim (0.9.3.99svn20060428-3) unstable; urgency=low
+sim (0.9.3.99+0.9.4rc2-1) unstable; urgency=low
 
+  * New upstream 0.9.4rc2.
   * Added screensaver dependency for autoaway plugin (libxss-dev)
     (Closes: #365650)
 
- -- Alexander Petrov <zowers@gmail.com>  Wed,  3 May 2006 01:54:42 +0400
+ -- Alexander Petrov <zowers@gmail.com>  Thu,  4 May 2006 02:46:12 +0400
 
 sim (0.9.3.99svn20060428-2) unstable; urgency=low
 
