Debian changes: Update man page, Standards-Version.  Added gnupg to Suggests and Description.

--- a/branches/0.9.4-debian/debian/sim.1
+++ b/branches/0.9.4-debian/debian/sim.1
@@ -1,4 +1,4 @@
-.TH "SIM" "1" "April 4, 2006" "SIM-IM Team" "Simple Instant Messenger"
+.TH "SIM" "1" "May 5, 2006" "SIM-IM Team" "Simple Instant Messenger"
 .SH NAME
 SIM \- Simple Instant Messenger
 .SH SYNOPSIS
@@ -29,6 +29,9 @@ Show version information
 \fB\-\-license\fR
 Show license information
 .TP
+\fB\-\-nofork\fR
+Do not fork from current console.
+.TP
 \fB\-\-\fR
 End of options
 .SH OPTIONS
@@ -39,26 +42,31 @@ Directory for files
 \fB\-d\fR <loglevel>
 Loglevel
 .TP
+\fB\-m\fR
+Show Monitor Window.
+.TP
 \fB\-s\fR <socket>
 Control socket
-.TP
-\fB\-\-nodock\fR
-No dock
-.PP
-KDE: 3.5.0
-SIM: 0.9.4 svn
 .SH "SEE ALSO"
+Information and help about SIM-IM can be found at project's site
+.B http://sim-im.org/
+.PP
+SIM is based on KDE and QT. Information about KDE project can be found at 
+.B http://kde.org/
+.PP
 The full documentation for
-.B Qt:
+.B Qt
 is maintained as a Texinfo manual.  If the
 .B info
 and
-.B Qt:
+.B Qt
 programs are properly installed at your site, the command
 .IP
-.B info Qt:
+.B info Qt
 .PP
 should give you access to the complete manual.
+More information about Qt can be found at Trolltech's site
+.B http://doc.trolltech.com/qt.html
 
 .SH "AUTHORS"
 SIM-IM Team, see http://sim-im.org/ and /usr/share/doc/sim/AUTHORS.sim
