--- a/branches/0.9.4-debian/debian/changelog
+++ b/branches/0.9.4-debian/debian/changelog
@@ -3,8 +3,11 @@ sim (0.9.3.99+0.9.4rc2-1) unstable; urgency=low
   * New upstream 0.9.4rc2.
   * Added screensaver dependency for autoaway plugin (libxss-dev)
     (Closes: #365650)
+  * Updated Standards-Version to 3.7.0.
+  * Updated man page.
+  * Added gnupg to Suggests and Description.
 
- -- Alexander Petrov <zowers@gmail.com>  Thu,  4 May 2006 02:46:12 +0400
+ -- Alexander Petrov <zowers@gmail.com>  Thu,  5 May 2006 02:46:12 +0400
 
 sim (0.9.3.99svn20060428-2) unstable; urgency=low
 
