--- a/trunk/po/sim.pot
+++ b/trunk/po/sim.pot
@@ -7377,7 +7377,7 @@ msgstr ""
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
