--- a/trunk/po/sk.po
+++ b/trunk/po/sk.po
@@ -9044,7 +9044,7 @@ msgstr "Oddelenie/Divízia:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr "Kontrolný dialóg"
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
