--- a/trunk/po/uk.po
+++ b/trunk/po/uk.po
@@ -7742,7 +7742,7 @@ msgstr "Відділ:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr "Графічна перевірка"
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
