--- a/trunk/po/cs.po
+++ b/trunk/po/cs.po
@@ -7597,7 +7597,7 @@ msgstr "Oddělení/Divize:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr "Ověřit DLG"
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
