--- a/trunk/po/es.po
+++ b/trunk/po/es.po
@@ -7586,7 +7586,7 @@ msgstr "Departamento:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
