--- a/trunk/po/pl.po
+++ b/trunk/po/pl.po
@@ -7945,7 +7945,7 @@ msgstr "Wydział:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
