--- a/trunk/po/pt_BR.po
+++ b/trunk/po/pt_BR.po
@@ -9256,7 +9256,7 @@ msgstr "Departamento:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
