--- a/trunk/po/sv.po
+++ b/trunk/po/sv.po
@@ -8025,7 +8025,7 @@ msgstr "Grupp / avdelning:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr "Kontrolldialog"
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
