--- a/trunk/po/sw.po
+++ b/trunk/po/sw.po
@@ -7629,7 +7629,7 @@ msgstr "Abdoilong:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
