--- a/trunk/po/tr.po
+++ b/trunk/po/tr.po
@@ -7874,7 +7874,7 @@ msgstr "Bölüm / Departman:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
