sane caption for VerifyDlg

--- a/branches/0.9.4/po/ru.po
+++ b/branches/0.9.4/po/ru.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "POT-Creation-Date: 2006-03-11 02:52+0500\n"
-"PO-Revision-Date: 2006-03-23 00:41+0500\n"
+"PO-Revision-Date: 2006-06-21 23:51+0600\n"
 "Last-Translator: Andrey Rahmatullin <wrar@altlinux.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -8669,8 +8669,8 @@ msgstr "Отдел:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
-msgstr ""
+msgid "Verification Dialog"
+msgstr "Диалог проверки подлинности"
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
 #: rc.cpp:1932
