--- a/branches/0.9.4/po/bg.po
+++ b/branches/0.9.4/po/bg.po
@@ -7737,7 +7737,7 @@ msgstr "Отдел:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr "Провери диалога"
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
