--- a/branches/0.9.4/po/ca.po
+++ b/branches/0.9.4/po/ca.po
@@ -7809,7 +7809,7 @@ msgstr "Departament:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
