--- a/branches/0.9.4/po/de.po
+++ b/branches/0.9.4/po/de.po
@@ -8024,7 +8024,7 @@ msgstr "Abteilung:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr "Kontrolldialog"
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
