--- a/branches/0.9.4/po/he.po
+++ b/branches/0.9.4/po/he.po
@@ -7938,7 +7938,7 @@ msgstr "מחלקה או דיוויזיה:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
