--- a/branches/0.9.4/po/hu.po
+++ b/branches/0.9.4/po/hu.po
@@ -7694,7 +7694,7 @@ msgstr "Div / dept:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
