--- a/branches/0.9.4/po/it.po
+++ b/branches/0.9.4/po/it.po
@@ -7570,7 +7570,7 @@ msgstr "Dipart.:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
