--- a/branches/0.9.4/po/nl.po
+++ b/branches/0.9.4/po/nl.po
@@ -7940,7 +7940,7 @@ msgstr "Afdeling:"
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 16
 #: rc.cpp:1929
 #, no-c-format
-msgid "VerifyDlg"
+msgid "Verification Dialog"
 msgstr ""
 
 #. i18n: file ./plugins/icq/verifydlgbase.ui line 124
