--- a/branches/0.9.4/ChangeLog
+++ b/branches/0.9.4/ChangeLog
@@ -5,7 +5,7 @@ USER-VISIBLE CHANGES IN SIM INSTANT MESSENGER
 [*] Changes
 
 
-=== SIM 0.9.4 (not released yet) ===
+=== SIM 0.9.4 (29.06.2006) ===
 
 Build system
 ~~~~~~~~~~~~
